--- a/comments/package.json
+++ b/comments/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.5",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongoose": "^8.1.0",
     "nodemon": "^3.0.2"
   }
 }
