--- a/event-bus/package.json
+++ b/event-bus/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.6.5",
     "express": "^4.18.2",
+    "mongoose": "^8.1.0",
     "nodemon": "^3.0.2"
   }
 }
